# mem

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  mem.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
app/: __init__.py  client.py  config.py  dependencies.py  main.py
app/api/routes/: emails.py  search.py
app/core/: chunker.py  email_parser.py  embeddings.py  excel_parser.py
app/db/: chromadb.py
app/models/: schemas.py
mem/: __init__.py  client.py  dependencies.py  main.py
mem/api/routes/: emails.py  search.py
mem/core/: chat_summarizer.py  email_parser.py  embeddings.py  feedback.py  list_classifier.py  pdf_parser.py  vision.py
mem/db/: chromadb.py
sample_emails/: sample.eml
tests/: test_api.py  test_chat_summarizer.py  test_client.py  test_excel_parser.py  test_list_classifier.py  test_parser.py
web/: __init__.py  app.py
web/components/: __init__.py  add_memory.py  memory_card.py  memory_list.py  search.py  sidebar.py
