[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mem"
version = "0.1.0"
description = "Persistent Memory Layer for AI Agents - Email ingestion and semantic search"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Agent Memory Team"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "chromadb>=0.4.0",
    "openai>=1.0.0",
    "python-multipart>=0.0.6",
    "extract-msg>=0.48.0",
    "pydantic-settings>=2.0.0",
    "streamlit>=1.28.0",
    "pypdf>=3.17.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/agent-memory/mem"
Repository = "https://github.com/agent-memory/mem"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
